[SoftwareManager] Removed "\n" from the beginning of some strings
These strings are the description for the menu options, so the new line is not justified/needed. Also, in one of them there was a full stop missing at the end. All translations are updated, so nothing is lost.

--- a/po/ar.po
+++ b/po/ar.po
@@ -30,12 +30,8 @@ msgstr ""
 "\n"
 "بعد الضغط على موافق ، يرجى الانتظار!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"نسخ احتياطي لإعدادات جهازك."
+msgid "Backup your receiver settings."
+msgstr "نسخ احتياطي لإعدادات جهازك."
 
 msgid ""
 "\n"
@@ -52,19 +48,11 @@ msgstr ""
 "\n"
 "تحرير عنوان مصدر الترقية."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"إدارة الملحقات أو الإضافات لجهازك"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "إدارة الملحقات أو الإضافات لجهازك."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"تحديث النظام عبر الإنترنت."
+msgid "Online update of your receiver software."
+msgstr "تحديث النظام عبر الإنترنت."
 
 #
 msgid ""
@@ -97,20 +85,12 @@ msgstr ""
 "\n"
 "استعادة نسخة احتياطية حسب التاريخ."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"إستعادة إعدادات جهاز الاستقبال."
+msgid "Restore your receiver settings."
+msgstr "إستعادة إعدادات جهاز الاستقبال."
 
 #
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"بحث عن ملحقات مخزنة محليا وتثبيتها."
+msgid "Scan for local extensions and install them."
+msgstr "بحث عن ملحقات مخزنة محليا وتثبيتها."
 
 msgid ""
 "\n"
