--- a/po/bg.po
+++ b/po/bg.po
@@ -27,12 +27,8 @@ msgstr ""
 "\n"
 "След натискане на ОК, моля изчакайте!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Копие на вашите настройките за приемника."
+msgid "Backup your receiver settings."
+msgstr "Копие на вашите настройките за приемника."
 
 msgid ""
 "\n"
@@ -48,19 +44,11 @@ msgstr ""
 "\n"
 "Редакция на адреса за ъпгрейд."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Управление на разширенията или плъгините за вашия приемник"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Управление на разширенията или плъгините за вашия приемник."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Мрежова актуализация за софтуера на вашия приемник."
+msgid "Online update of your receiver software."
+msgstr "Мрежова актуализация за софтуера на вашия приемник."
 
 msgid ""
 "\n"
@@ -89,19 +77,11 @@ msgstr ""
 "\n"
 "Възстановяване на вашите копия по дата."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Възстановяване настройките на вашия приемник."
+msgid "Restore your receiver settings."
+msgstr "Възстановяване настройките на вашия приемник."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Сканиране за локални разширения и инсталация."
+msgid "Scan for local extensions and install them."
+msgstr "Сканиране за локални разширения и инсталация."
 
 msgid ""
 "\n"
