--- a/po/cs.po
+++ b/po/cs.po
@@ -30,12 +30,8 @@ msgstr ""
 "\n"
 "Po stisknutí OK čekejte, prosím!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Záloha nastavení Vašeho přijímače."
+msgid "Backup your receiver settings."
+msgstr "Záloha nastavení Vašeho přijímače."
 
 msgid ""
 "\n"
@@ -52,19 +48,11 @@ msgstr ""
 "\n"
 "Upravit adresy aktualizačních zdrojů."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Správa rozšíření nebo pluginů Vašeho přijímače"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Správa rozšíření nebo pluginů Vašeho přijímače."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Online aktualizace programového vybavení přijímače."
+msgid "Online update of your receiver software."
+msgstr "Online aktualizace programového vybavení přijímače."
 
 #
 msgid ""
@@ -97,20 +85,12 @@ msgstr ""
 "\n"
 "Obnova záloh podle data."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Obnova nastavení Vašeho přijímače."
+msgid "Restore your receiver settings."
+msgstr "Obnova nastavení Vašeho přijímače."
 
 #
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Vyhledat a nainstalovat místní rozšíření."
+msgid "Scan for local extensions and install them."
+msgstr "Vyhledat a nainstalovat místní rozšíření."
 
 #
 msgid ""
