--- a/po/da.po
+++ b/po/da.po
@@ -31,12 +31,8 @@ msgstr ""
 "\n"
 "Efter tryk på OK, vent venligst!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Lav en backup af din receivers indstillinger. "
+msgid "Backup your receiver settings."
+msgstr "Lav en backup af din receivers indstillinger. "
 
 msgid ""
 "\n"
@@ -53,19 +49,11 @@ msgstr ""
 "\n"
 "Rediger kildeadressen til opgradering."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Indstil udvidelser eller plugins på din receiver."
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Indstil udvidelser eller plugins på din receiver."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Online opdatering af din receiver software."
+msgid "Online update of your receiver software."
+msgstr "Online opdatering af din receiver software."
 
 #
 msgid ""
@@ -97,20 +85,12 @@ msgstr ""
 "\n"
 "Gendan dine backups efter dato."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Genetabler receiverens indstillinger."
+msgid "Restore your receiver settings."
+msgstr "Genetabler receiverens indstillinger."
 
 #
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Søg efter lokale udvidelser og installer dem."
+msgid "Scan for local extensions and install them."
+msgstr "Søg efter lokale udvidelser og installer dem."
 
 #
 msgid ""
