--- a/po/de.po
+++ b/po/de.po
@@ -28,12 +28,8 @@ msgstr ""
 "\n"
 "Nachdem Sie OK gedrückt haben, bitte warten!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Sichern Ihrer Receiver-Einstellungen."
+msgid "Backup your receiver settings."
+msgstr "Sichern Ihrer Receiver-Einstellungen."
 
 msgid ""
 "\n"
@@ -49,19 +45,11 @@ msgstr ""
 "\n"
 "Update-Quell-Adresse bearbeiten."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Verwalten Sie die Erweiterungen und Plugins Ihres Receivers"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Verwalten Sie die Erweiterungen und Plugins Ihres Receivers."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Online-Update Ihrer Receiver-Software."
+msgid "Online update of your receiver software."
+msgstr "Online-Update Ihrer Receiver-Software."
 
 msgid ""
 "\n"
@@ -91,19 +79,11 @@ msgstr ""
 "\n"
 "Wiederherstellen Ihrer Sicherungen nach Datum."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Wiederherstellen Ihrer Receiver-Einstellungen."
+msgid "Restore your receiver settings."
+msgstr "Wiederherstellen Ihrer Receiver-Einstellungen."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Nach lokalen Erweiterungen suchen und diese installieren."
+msgid "Scan for local extensions and install them."
+msgstr "Nach lokalen Erweiterungen suchen und diese installieren."
 
 msgid ""
 "\n"
