--- a/po/el.po
+++ b/po/el.po
@@ -28,12 +28,8 @@ msgstr ""
 "\n"
 "Αφού πιέσετε ΟΚ, παρακαλώ περιμένετε!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-" Δημιουργία αντιγράφου ασφαλείας των ρυθμίσεων του δέκτη σας."
+msgid "Backup your receiver settings."
+msgstr "Δημιουργία αντιγράφου ασφαλείας των ρυθμίσεων του δέκτη σας."
 
 msgid ""
 "\n"
@@ -49,19 +45,11 @@ msgstr ""
 "\n"
 "Επεξεργασία διεύθυνσης πηγής ενημερώσεων."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Διαχείριση επεκτάσεων ή προσθέτων για τον δέκτη σας"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Διαχείριση επεκτάσεων ή προσθέτων για τον δέκτη σας."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Διαδικτυακή ενημέρωση του λογισμικού του δέκτη σας."
+msgid "Online update of your receiver software."
+msgstr "Διαδικτυακή ενημέρωση του λογισμικού του δέκτη σας."
 
 msgid ""
 "\n"
@@ -91,19 +79,11 @@ msgstr ""
 "\n"
 "Επαναφορά αντιγράφων ασφαλείας κατά ημερομηνία."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Επαναφορά των ρυθμίσεων του δέκτη σας."
+msgid "Restore your receiver settings."
+msgstr "Επαναφορά των ρυθμίσεων του δέκτη σας."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Αναζήτηση και εγκατάσταση επεκτάσεων τοπικά."
+msgid "Scan for local extensions and install them."
+msgstr "Αναζήτηση και εγκατάσταση επεκτάσεων τοπικά."
 
 msgid ""
 "\n"
