--- a/po/en.po
+++ b/po/en.po
@@ -27,12 +27,8 @@ msgstr ""
 "\n"
 "After pressing OK, please wait!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Backup your receiver settings."
+msgid "Backup your receiver settings."
+msgstr "Backup your receiver settings."
 
 msgid ""
 "\n"
@@ -46,19 +42,11 @@ msgstr ""
 "\n"
 "Edit the update source address."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Manage extensions or plugins for your receiver"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Manage extensions or plugins for your receiver."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Online update of your receiver software."
+msgid "Online update of your receiver software."
+msgstr "Online update of your receiver software."
 
 msgid ""
 "\n"
@@ -85,19 +73,11 @@ msgstr ""
 "\n"
 "Restore your backups by date."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Restore your receiver settings."
+msgid "Restore your receiver settings."
+msgstr "Restore your receiver settings."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Scan for local extensions and install them."
+msgid "Scan for local extensions and install them."
+msgstr "Scan for local extensions and install them."
 
 msgid ""
 "\n"
