--- a/po/es.po
+++ b/po/es.po
@@ -32,12 +32,8 @@ msgstr ""
 "\n"
 "Después de pulsar OK, espere!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Copia seguridad de configuracion del receptor."
+msgid "Backup your receiver settings."
+msgstr "Copia seguridad de configuracion del receptor."
 
 msgid ""
 "\n"
@@ -54,19 +50,11 @@ msgstr ""
 "\n"
 "Editar la dirección fuente de actualización."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Administrar extensiones o complementos en su receptor"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Administrar extensiones o complementos en su receptor."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Actualizacion en linea del software de su receptor."
+msgid "Online update of your receiver software."
+msgstr "Actualizacion en linea del software de su receptor."
 
 #
 msgid ""
@@ -99,20 +87,12 @@ msgstr ""
 "\n"
 "Restaurar su backup for fecha."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Restaurar la configuracion de su receptor."
+msgid "Restore your receiver settings."
+msgstr "Restaurar la configuracion de su receptor."
 
 #
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Busca extensiones locales e instálalas."
+msgid "Scan for local extensions and install them."
+msgstr "Busca extensiones locales e instálalas."
 
 #
 msgid ""
