--- a/po/et.po
+++ b/po/et.po
@@ -28,12 +28,8 @@ msgstr ""
 "\n"
 "Vajuta OK ja oota!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Varunda vastuvõtja seaded."
+msgid "Backup your receiver settings."
+msgstr "Varunda vastuvõtja seaded."
 
 msgid ""
 "\n"
@@ -49,19 +45,11 @@ msgstr ""
 "\n"
 "Muuda uuenduste allika aadressi."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Halda laiendusi"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Halda laiendusi."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Vastuvõtja internetiuuendused."
+msgid "Online update of your receiver software."
+msgstr "Vastuvõtja internetiuuendused."
 
 msgid ""
 "\n"
@@ -90,19 +78,11 @@ msgstr ""
 "\n"
 "Taasta oma varukoopiad kuupäeva järgi."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Taasta vastuvõtja seaded."
+msgid "Restore your receiver settings."
+msgstr "Taasta vastuvõtja seaded."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Otsi kohalikke laiendusi ja paigalda need."
+msgid "Scan for local extensions and install them."
+msgstr "Otsi kohalikke laiendusi ja paigalda need."
 
 msgid ""
 "\n"
