--- a/po/fa.po
+++ b/po/fa.po
@@ -31,9 +31,7 @@ msgstr ""
 "\n"
 "بعد از فشار دادن دکمه OK لطفا صبر کنید"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
+msgid "Backup your receiver settings."
 msgstr ""
 
 msgid ""
@@ -49,14 +47,10 @@ msgstr ""
 "\n"
 "ویرایش آدرس منبع به روز رسانی"
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
+msgid "Manage extensions or plugins for your receiver."
 msgstr ""
 
-msgid ""
-"\n"
-"Online update of your receiver software."
+msgid "Online update of your receiver software."
 msgstr ""
 
 msgid ""
@@ -85,18 +79,12 @@ msgstr ""
 "\n"
 "بازگردانی نسخه های پشتیبان شما توسط تاریخ"
 
-msgid ""
-"\n"
-"Restore your receiver settings."
+msgid "Restore your receiver settings."
 msgstr ""
 
 #
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"اسکن برای بسته های محلی و نصب آنها"
+msgid "Scan for local extensions and install them."
+msgstr "اسکن برای بسته های محلی و نصب آنها"
 
 #
 msgid ""
