--- a/po/fi.po
+++ b/po/fi.po
@@ -31,12 +31,8 @@ msgstr ""
 "\n"
 "Kun olet painanut OK-näppäintä, odota!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Varmuuskopioi vastaanottimesi asetukset."
+msgid "Backup your receiver settings."
+msgstr "Varmuuskopioi vastaanottimesi asetukset."
 
 msgid ""
 "\n"
@@ -51,19 +47,11 @@ msgstr ""
 "\n"
 "Muokkaa päivityksen lähdeosoitetta."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Hallitse lisäosia tai plugineja"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Hallitse lisäosia tai plugineja."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Päivitä ohjelmisto verkosta."
+msgid "Online update of your receiver software."
+msgstr "Päivitä ohjelmisto verkosta."
 
 #
 msgid ""
@@ -95,20 +83,12 @@ msgstr ""
 "\n"
 "Palauta varmuuskopiot päivän mukaan."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Palauta vastaanottimesi asetukset."
+msgid "Restore your receiver settings."
+msgstr "Palauta vastaanottimesi asetukset."
 
 #
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Etsi paikallisia lisäosia ja asenna ne."
+msgid "Scan for local extensions and install them."
+msgstr "Etsi paikallisia lisäosia ja asenna ne."
 
 #
 msgid ""
