--- a/po/fr.po
+++ b/po/fr.po
@@ -27,12 +27,8 @@ msgstr ""
 "\n"
 "Après avoir appuyé sur OK, veuillez patienter!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Sauvegarder les réglages du récepteur."
+msgid "Backup your receiver settings."
+msgstr "Sauvegarder les réglages du récepteur."
 
 msgid ""
 "\n"
@@ -48,19 +44,11 @@ msgstr ""
 "\n"
 "Éditer l'adresse d'origine de la mise à jour."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Gérer les extensions ou plugins pour votre récepteur"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Gérer les extensions ou plugins pour votre récepteur."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Mise à jour en ligne du logiciel de votre récepteur."
+msgid "Online update of your receiver software."
+msgstr "Mise à jour en ligne du logiciel de votre récepteur."
 
 msgid ""
 "\n"
@@ -90,19 +78,11 @@ msgstr ""
 "\n"
 "Restaurer vos sauvegardes par date."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Restaurer les réglages de votre récepteur."
+msgid "Restore your receiver settings."
+msgstr "Restaurer les réglages de votre récepteur."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Rechercher les extensions locales et les installer."
+msgid "Scan for local extensions and install them."
+msgstr "Rechercher les extensions locales et les installer."
 
 msgid ""
 "\n"
