--- a/po/he.po
+++ b/po/he.po
@@ -35,9 +35,7 @@ msgstr ""
 "\n"
 "!אחרי לחיצה על אשר,נא המתן"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
+msgid "Backup your receiver settings."
 msgstr ""
 
 msgid ""
@@ -53,14 +51,10 @@ msgstr ""
 "\n"
 "ערוך את כתובת מקור העדכון"
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
+msgid "Manage extensions or plugins for your receiver."
 msgstr ""
 
-msgid ""
-"\n"
-"Online update of your receiver software."
+msgid "Online update of your receiver software."
 msgstr ""
 
 #
@@ -91,18 +85,12 @@ msgstr ""
 "\n"
 "שיחזור גיבויים לפי תאריך"
 
-msgid ""
-"\n"
-"Restore your receiver settings."
+msgid "Restore your receiver settings."
 msgstr ""
 
 #
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"סרוק לתוספות מקומיות והתקן אותם"
+msgid "Scan for local extensions and install them."
+msgstr "סרוק לתוספות מקומיות והתקן אותם"
 
 msgid ""
 "\n"
