--- a/po/hr.po
+++ b/po/hr.po
@@ -27,12 +27,8 @@ msgstr ""
 "\n"
 "Nakon pritiska na OK, molimo pričekajte!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Napravite kopiju postavki vašeg resivera."
+msgid "Backup your receiver settings."
+msgstr "Napravite kopiju postavki vašeg resivera."
 
 msgid ""
 "\n"
@@ -48,19 +44,11 @@ msgstr ""
 "\n"
 "Uredite adresu za ažuriranje."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Omogućiti proširenja ili dodatke za vaš prijemnik"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Omogućiti proširenja ili dodatke za vaš prijemnik."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Online ažuriranje softvera vašeg prijemnika."
+msgid "Online update of your receiver software."
+msgstr "Online ažuriranje softvera vašeg prijemnika."
 
 msgid ""
 "\n"
@@ -90,19 +78,11 @@ msgstr ""
 "\n"
 "Vratite rezervnu kopiju po datumu."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Vratite postavke prijemnika."
+msgid "Restore your receiver settings."
+msgstr "Vratite postavke prijemnika."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Tražite lokalna proširenja i instalirajte ih."
+msgid "Scan for local extensions and install them."
+msgstr "Tražite lokalna proširenja i instalirajte ih."
 
 msgid ""
 "\n"
