--- a/po/hu.po
+++ b/po/hu.po
@@ -27,12 +27,8 @@ msgstr ""
 "\n"
 "Az OK gomb lenyomása után kérem, várjon!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"A készülék beállításainak mentése."
+msgid "Backup your receiver settings."
+msgstr "A készülék beállításainak mentése."
 
 msgid ""
 "\n"
@@ -48,19 +44,11 @@ msgstr ""
 "\n"
 "A szoftver-frissítési forrás címének módosítása."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Kiegészítők és bővítmények kezelése"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Kiegészítők és bővítmények kezelése."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"A készülék szoftverének online frissítése."
+msgid "Online update of your receiver software."
+msgstr "A készülék szoftverének online frissítése."
 
 msgid ""
 "\n"
@@ -90,19 +78,11 @@ msgstr ""
 "\n"
 "Visszaállítás dátum szerint."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"A készülék beállításainak visszaállítása."
+msgid "Restore your receiver settings."
+msgstr "A készülék beállításainak visszaállítása."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Helyileg bemásolt bővítmények keresése, telepítése."
+msgid "Scan for local extensions and install them."
+msgstr "Helyileg bemásolt bővítmények keresése, telepítése."
 
 msgid ""
 "\n"
