--- a/po/id.po
+++ b/po/id.po
@@ -27,12 +27,8 @@ msgstr ""
 "\n"
 "Setelah tekan OK, silakan tunggu!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Buat berkas cadangan penyetelan Rx anda"
+msgid "Backup your receiver settings."
+msgstr "Buat berkas cadangan penyetelan Rx anda."
 
 msgid ""
 "\n"
@@ -48,19 +44,11 @@ msgstr ""
 "\n"
 "Ubah alamat sumber peningkatan."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Kelola ekstensi atau plugin pada Rx anda"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Kelola ekstensi atau plugin pada Rx anda."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Pembaruan daring perangkat lunak Rx anda."
+msgid "Online update of your receiver software."
+msgstr "Pembaruan daring perangkat lunak Rx anda."
 
 msgid ""
 "\n"
@@ -87,19 +75,11 @@ msgstr ""
 "\n"
 "Pulihkan data cadangan anda berdasarkan tanggal."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Pulihkan penyetelan Rx anda."
+msgid "Restore your receiver settings."
+msgstr "Pulihkan penyetelan Rx anda."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Pindai ekstensi lokal kemudian pasang."
+msgid "Scan for local extensions and install them."
+msgstr "Pindai ekstensi lokal kemudian pasang."
 
 msgid ""
 "\n"
