--- a/po/is.po
+++ b/po/is.po
@@ -32,9 +32,7 @@ msgstr ""
 "\n"
 "Bíðið eftir að hafa ýtt á OK!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
+msgid "Backup your receiver settings."
 msgstr ""
 
 msgid ""
@@ -49,14 +47,10 @@ msgstr ""
 "\n"
 "Breyta veffangi uppfærslu uppruna."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
+msgid "Manage extensions or plugins for your receiver."
 msgstr ""
 
-msgid ""
-"\n"
-"Online update of your receiver software."
+msgid "Online update of your receiver software."
 msgstr ""
 
 #
@@ -87,17 +81,11 @@ msgstr ""
 "\n"
 "Setja inn stilligar eftir dagsetningu."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
+msgid "Restore your receiver settings."
 msgstr ""
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Leita að viðbótum á móttakara og setja þær upp."
+msgid "Scan for local extensions and install them."
+msgstr "Leita að viðbótum á móttakara og setja þær upp."
 
 #
 msgid ""
