--- a/po/it.po
+++ b/po/it.po
@@ -34,12 +34,8 @@ msgstr ""
 "\n"
 "Dopo aver premuto OK, attendere!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Backup delle impostazioni del ricevitore."
+msgid "Backup your receiver settings."
+msgstr "Backup delle impostazioni del ricevitore."
 
 msgid ""
 "\n"
@@ -55,19 +51,11 @@ msgstr ""
 "\n"
 "Modificare l'indirizzo dell'origine degli aggiornamenti."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Gestire le estensioni ed i plugin del ricevitore"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Gestire le estensioni ed i plugin del ricevitore."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Aggiornamento online del software del ricevitore."
+msgid "Online update of your receiver software."
+msgstr "Aggiornamento online del software del ricevitore."
 
 msgid ""
 "\n"
@@ -96,19 +84,11 @@ msgstr ""
 "\n"
 "Ripristinare i backup per data."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Ripristinare le impostazioni del ricevitore."
+msgid "Restore your receiver settings."
+msgstr "Ripristinare le impostazioni del ricevitore."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Ricercare le estensioni locali ed installarle."
+msgid "Scan for local extensions and install them."
+msgstr "Ricercare le estensioni locali ed installarle."
 
 msgid ""
 "\n"
