--- a/po/ku.po
+++ b/po/ku.po
@@ -34,12 +34,8 @@ msgstr ""
 "\n"
 "Pay Ok bine bisekin!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"yedeka bigre...."
+msgid "Backup your receiver settings."
+msgstr "yedeka bigre..."
 
 msgid ""
 "\n"
@@ -53,26 +49,18 @@ msgstr ""
 "\n"
 "Update ra Eyaran Çékin"
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Manage extensions or plugins for your receiver"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Manage extensions or plugins for your receiver."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Zindi Update bikin"
+msgid "Online update of your receiver software."
+msgstr "Zindi Update bikin."
 
 msgid ""
 "\n"
 "Press OK on your remote control to continue."
 msgstr ""
 "\n"
-"Ji Kumanda pay Ok  bisekin."
+"Ji Kumanda pay OK bisekin."
 
 #, fuzzy
 msgid ""
@@ -92,19 +80,11 @@ msgstr ""
 "\n"
 "backup xwu restore bikin"
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Risiver restore bikin"
+msgid "Restore your receiver settings."
+msgstr "Risiver restore bikin."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Giradiye mehali bigeri "
+msgid "Scan for local extensions and install them."
+msgstr "Giradiye mehali bigeri."
 
 msgid ""
 "\n"
