--- a/po/lt.po
+++ b/po/lt.po
@@ -28,12 +28,8 @@ msgstr ""
 "\n"
 "Paspaudus OK, prašome laukti!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Atsarginė imtuvo nustatymų kopija."
+msgid "Backup your receiver settings."
+msgstr "Atsarginė imtuvo nustatymų kopija."
 
 msgid ""
 "\n"
@@ -49,19 +45,11 @@ msgstr ""
 "\n"
 "Redaguoti atnaujinimo šaltinių adresus."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Valdykite savo imtuvo priedus ir išplėtimus"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Valdykite savo imtuvo priedus ir išplėtimus."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Atnaujinti imtuvo programinę įrangą internetu."
+msgid "Online update of your receiver software."
+msgstr "Atnaujinti imtuvo programinę įrangą internetu."
 
 msgid ""
 "\n"
@@ -91,19 +79,11 @@ msgstr ""
 "\n"
 "Atkurti atsarginę kopiją pagal datą."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Atkurti imtuvo nustatymus."
+msgid "Restore your receiver settings."
+msgstr "Atkurti imtuvo nustatymus."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Ieškoti vietinių išplėtimų ir juos įdiegti."
+msgid "Scan for local extensions and install them."
+msgstr "Ieškoti vietinių išplėtimų ir juos įdiegti."
 
 msgid ""
 "\n"
