--- a/po/lv.po
+++ b/po/lv.po
@@ -29,12 +29,8 @@ msgstr ""
 "\n"
 "Pēc OK nospiešanas uzgaidiet!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Izveidot iestatījumu dublējumkopiju."
+msgid "Backup your receiver settings."
+msgstr "Izveidot iestatījumu dublējumkopiju."
 
 msgid ""
 "\n"
@@ -50,19 +46,11 @@ msgstr ""
 "\n"
 "Rediģēt atjaunināšanas avota adresi."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Pārvaldīt uztvērēja paplašinājumus vai spraudņus"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Pārvaldīt uztvērēja paplašinājumus vai spraudņus."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Uztvērēja programmatūras atjaunošana no interneta."
+msgid "Online update of your receiver software."
+msgstr "Uztvērēja programmatūras atjaunošana no interneta."
 
 msgid ""
 "\n"
@@ -92,19 +80,11 @@ msgstr ""
 "\n"
 "Atjaunot dublējumkopijas pēc datuma."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Atjaunot uztvērēja iestatījumus."
+msgid "Restore your receiver settings."
+msgstr "Atjaunot uztvērēja iestatījumus."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Meklēt un instalēt lokālos paplašinājumus."
+msgid "Scan for local extensions and install them."
+msgstr "Meklēt un instalēt lokālos paplašinājumus."
 
 msgid ""
 "\n"
