--- a/po/nb.po
+++ b/po/nb.po
@@ -32,12 +32,8 @@ msgstr ""
 "\n"
 "Tast OK, vennligst vent litt!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Sikkerhetskopier dine mottaker innstillinger."
+msgid "Backup your receiver settings."
+msgstr "Sikkerhetskopier dine mottaker innstillinger."
 
 msgid ""
 "\n"
@@ -53,19 +49,11 @@ msgstr ""
 "\n"
 "Rediger kildeadressen for oppdateringen."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Administrer utvidelser og tilleggsprogrammer for mottakeren din"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Administrer utvidelser og tilleggsprogrammer for mottakeren din."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Online oppdatering av din mottakers programvare."
+msgid "Online update of your receiver software."
+msgstr "Online oppdatering av din mottakers programvare."
 
 #
 msgid ""
@@ -96,19 +84,11 @@ msgstr ""
 "\n"
 "Gjenopprett dine sikkerhetskopier etter dato."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Tilbakestill din mottakers innstillinger."
+msgid "Restore your receiver settings."
+msgstr "Tilbakestill din mottakers innstillinger."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Søk etter lokale utvidelser og installer dem."
+msgid "Scan for local extensions and install them."
+msgstr "Søk etter lokale utvidelser og installer dem."
 
 #
 msgid ""
