--- a/po/nl.po
+++ b/po/nl.po
@@ -27,12 +27,8 @@ msgstr ""
 "\n"
 "Na indrukken van Ok, een moment geduld aub!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Backup de ontvangerinstellingen."
+msgid "Backup your receiver settings."
+msgstr "Backup de ontvangerinstellingen."
 
 msgid ""
 "\n"
@@ -48,19 +44,11 @@ msgstr ""
 "\n"
 "Wijzig het bronadres voor de update."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Beheer applicaties of plugins voor uw ontvanger"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Beheer applicaties of plugins voor uw ontvanger."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Online update van de ontvangersoftware."
+msgid "Online update of your receiver software."
+msgstr "Online update van de ontvangersoftware."
 
 msgid ""
 "\n"
@@ -90,19 +78,11 @@ msgstr ""
 "\n"
 "Zet een backup van een bepaalde datum terug."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Herstel de ontvangerinstellingen."
+msgid "Restore your receiver settings."
+msgstr "Herstel de ontvangerinstellingen."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Zoek naar lokale applicaties en installeer deze."
+msgid "Scan for local extensions and install them."
+msgstr "Zoek naar lokale applicaties en installeer deze."
 
 msgid ""
 "\n"
