--- a/po/nn.po
+++ b/po/nn.po
@@ -32,12 +32,8 @@ msgstr ""
 "\n"
 "Etter å ha trykket OK, vennligst vent!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Ta sikkerhetskopi av mottakerinnstillinger."
+msgid "Backup your receiver settings."
+msgstr "Ta sikkerhetskopi av mottakerinnstillinger."
 
 msgid ""
 "\n"
@@ -51,19 +47,11 @@ msgstr ""
 "\n"
 "Endre oppdateringsadresse."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Administrere programvare utvidelser til mottakeren."
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Administrere programvare utvidelser til mottakeren."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Online oppdatering av din mottaker"
+msgid "Online update of your receiver software."
+msgstr "Online oppdatering av din mottaker."
 
 #
 msgid ""
@@ -91,19 +79,11 @@ msgstr ""
 "\n"
 "Gjenopprette sikkerhetskopier etter dato."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Gjenopprette mottakeren."
+msgid "Restore your receiver settings."
+msgstr "Gjenopprette mottakeren."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Søke etter og installere lokale utvidelser."
+msgid "Scan for local extensions and install them."
+msgstr "Søke etter og installere lokale utvidelser."
 
 #
 msgid ""
