--- a/po/pl.po
+++ b/po/pl.po
@@ -27,12 +27,8 @@ msgstr ""
 "\n"
 "Po naciśnięciu OK czekaj!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Wykonaj kopię ustawień."
+msgid "Backup your receiver settings."
+msgstr "Wykonaj kopię ustawień."
 
 msgid ""
 "\n"
@@ -48,19 +44,11 @@ msgstr ""
 "\n"
 "Edytuj adres aktualizacji."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Zarządzaj rozszerzeniami i wtyczkami"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Zarządzaj rozszerzeniami i wtyczkami."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Aktualizacja oprogramowania online."
+msgid "Online update of your receiver software."
+msgstr "Aktualizacja oprogramowania online."
 
 msgid ""
 "\n"
@@ -90,19 +78,11 @@ msgstr ""
 "\n"
 "Przywróć backup według daty."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Przywróć własne ustawienia odbiornika."
+msgid "Restore your receiver settings."
+msgstr "Przywróć własne ustawienia odbiornika."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Szukaj lokalnych rozszerzeń i zainstaluj je."
+msgid "Scan for local extensions and install them."
+msgstr "Szukaj lokalnych rozszerzeń i zainstaluj je."
 
 msgid ""
 "\n"
