--- a/po/pt.po
+++ b/po/pt.po
@@ -31,12 +31,8 @@ msgstr ""
 "\n"
 "Depois de pressionar OK, aguarde por favor!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Backup das definições do receptor."
+msgid "Backup your receiver settings."
+msgstr "Backup das definições do receptor."
 
 msgid ""
 "\n"
@@ -51,19 +47,11 @@ msgstr ""
 "\n"
 "Editar o endereço da fonte de actualização."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Gestão das extensões e Plugins do seu receptor"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Gestão das extensões e Plugins do seu receptor."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Actualização online do software do receptor."
+msgid "Online update of your receiver software."
+msgstr "Actualização online do software do receptor."
 
 #
 msgid ""
@@ -93,20 +81,12 @@ msgstr ""
 "\n"
 "Restaurar Backups por data."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Restaurar as definições do receptor."
+msgid "Restore your receiver settings."
+msgstr "Restaurar as definições do receptor."
 
 #
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Procurar extensões locais e instalá-las."
+msgid "Scan for local extensions and install them."
+msgstr "Procurar extensões locais e instalá-las."
 
 #
 msgid ""
