--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -31,12 +31,8 @@ msgstr ""
 "\n"
 "Após pressionar OK, aguarde..."
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Faça um backup das configurações."
+msgid "Backup your receiver settings."
+msgstr "Faça um backup das configurações."
 
 msgid ""
 "\n"
@@ -50,19 +46,11 @@ msgstr ""
 "\n"
 "Editar o endereço do repositório de atualizações."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Gerenciador de extensões ou plugins para o receptor"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Gerenciador de extensões ou plugins para o receptor."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Atualização online do software do receptor."
+msgid "Online update of your receiver software."
+msgstr "Atualização online do software do receptor."
 
 msgid ""
 "\n"
@@ -89,19 +77,11 @@ msgstr ""
 "\n"
 "Restaurar os backups por data."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Restaurar as configurações do receptor."
+msgid "Restore your receiver settings."
+msgstr "Restaurar as configurações do receptor."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Buscar e instalar extensões locais."
+msgid "Scan for local extensions and install them."
+msgstr "Buscar e instalar extensões locais."
 
 msgid ""
 "\n"
