--- a/po/ro.po
+++ b/po/ro.po
@@ -31,9 +31,7 @@ msgstr ""
 "\n"
 "Dupa apasarea OK, va rog asteptati!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
+msgid "Backup your receiver settings."
 msgstr ""
 
 msgid ""
@@ -48,14 +46,10 @@ msgstr ""
 "\n"
 "Editati pe adresa de update."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
+msgid "Manage extensions or plugins for your receiver."
 msgstr ""
 
-msgid ""
-"\n"
-"Online update of your receiver software."
+msgid "Online update of your receiver software."
 msgstr ""
 
 msgid ""
@@ -83,14 +77,10 @@ msgstr ""
 "\n"
 "Restaurare backups dupa data."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
+msgid "Restore your receiver settings."
 msgstr ""
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
+msgid "Scan for local extensions and install them."
 msgstr ""
 
 msgid ""
