--- a/po/ru.po
+++ b/po/ru.po
@@ -27,12 +27,8 @@ msgstr ""
 "\n"
 "После нажатия кнопки ОК, пожалуйста, подождите!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Бэкап настроек Вашего ресивера."
+msgid "Backup your receiver settings."
+msgstr "Бэкап настроек Вашего ресивера."
 
 msgid ""
 "\n"
@@ -48,19 +44,11 @@ msgstr ""
 "\n"
 "Редактировать адрес источника обновления."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Управление дополнениями или плагинами Вашего ресивера"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Управление дополнениями или плагинами Вашего ресивера."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Онлайн обновление ПО Вашего ресивера."
+msgid "Online update of your receiver software."
+msgstr "Онлайн обновление ПО Вашего ресивера."
 
 msgid ""
 "\n"
@@ -90,19 +78,11 @@ msgstr ""
 "\n"
 "Восстановить Ваши бэкапы по дате."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Восстановить настройки Вашего ресивера."
+msgid "Restore your receiver settings."
+msgstr "Восстановить настройки Вашего ресивера."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Сканирование для локальных дополнений и установка их."
+msgid "Scan for local extensions and install them."
+msgstr "Сканирование для локальных дополнений и установка их."
 
 msgid ""
 "\n"
