--- a/po/sk.po
+++ b/po/sk.po
@@ -28,12 +28,8 @@ msgstr ""
 "\n"
 "Po stlačení tlačidla OK počkajte!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Záloha nastavení prijímača."
+msgid "Backup your receiver settings."
+msgstr "Záloha nastavení prijímača."
 
 msgid ""
 "\n"
@@ -49,19 +45,11 @@ msgstr ""
 "\n"
 "Upraviť adresu zdroja aktualizácií."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Správa rozšírení alebo doplnkov prijímača"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Správa rozšírení alebo doplnkov prijímača."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Online aktualizácia softvéru prijímača."
+msgid "Online update of your receiver software."
+msgstr "Online aktualizácia softvéru prijímača."
 
 msgid ""
 "\n"
@@ -91,19 +79,11 @@ msgstr ""
 "\n"
 "Obnoviť zo zálohy podľa dátumu."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Obnova nastavení prijímača."
+msgid "Restore your receiver settings."
+msgstr "Obnova nastavení prijímača."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Prehľadať miestne balíčky a nainštalovať ich."
+msgid "Scan for local extensions and install them."
+msgstr "Prehľadať miestne balíčky a nainštalovať ich."
 
 msgid ""
 "\n"
