--- a/po/sl.po
+++ b/po/sl.po
@@ -29,12 +29,8 @@ msgstr ""
 "\n"
 "Po pritisku na OK, počakajte!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Varnostno kopiranje nastavitev sprejemnika."
+msgid "Backup your receiver settings."
+msgstr "Varnostno kopiranje nastavitev sprejemnika."
 
 msgid ""
 "\n"
@@ -49,19 +45,11 @@ msgstr ""
 "\n"
 "Sprememba vira za nadgradnjo sprejemnika."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Upravljanje z razširitvami in vtičniki sprejemnika."
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Upravljanje z razširitvami in vtičniki sprejemnika."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Nadgradnja sprejemnika preko interneta."
+msgid "Online update of your receiver software."
+msgstr "Nadgradnja sprejemnika preko interneta."
 
 #
 msgid ""
@@ -93,20 +81,12 @@ msgstr ""
 "\n"
 "Obnova varnostne kopije glede na datum."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Obnovitev nastavitev sprejemnika."
+msgid "Restore your receiver settings."
+msgstr "Obnovitev nastavitev sprejemnika."
 
 #
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Iskanje in nameščanje lokalnih razširitev."
+msgid "Scan for local extensions and install them."
+msgstr "Iskanje in nameščanje lokalnih razširitev."
 
 #
 msgid ""
