--- a/po/sr.po
+++ b/po/sr.po
@@ -34,9 +34,7 @@ msgstr ""
 "\n"
 "Posle stiskanja OK,molim pričekajte"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
+msgid "Backup your receiver settings."
 msgstr ""
 
 msgid ""
@@ -52,14 +50,10 @@ msgstr ""
 "\n"
 "Uredi poboljšanu izvornu adresu"
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
+msgid "Manage extensions or plugins for your receiver."
 msgstr ""
 
-msgid ""
-"\n"
-"Online update of your receiver software."
+msgid "Online update of your receiver software."
 msgstr ""
 
 #
@@ -90,18 +84,12 @@ msgstr ""
 "\n"
 "Vrati svoje snimljene kopije po datumu"
 
-msgid ""
-"\n"
-"Restore your receiver settings."
+msgid "Restore your receiver settings."
 msgstr ""
 
 #
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Traži lokalna proširenja i instaliraj ih. "
+msgid "Scan for local extensions and install them."
+msgstr "Traži lokalna proširenja i instaliraj ih. "
 
 #
 msgid ""
