--- a/po/sv.po
+++ b/po/sv.po
@@ -31,12 +31,8 @@ msgstr ""
 "\n"
 "Efter att ha tryckt OK, var god vänta!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Säkerhetskopiera din mottagares inställningar."
+msgid "Backup your receiver settings."
+msgstr "Säkerhetskopiera din mottagares inställningar."
 
 msgid ""
 "\n"
@@ -53,19 +49,11 @@ msgstr ""
 "\n"
 "Ändra uppdateringskällans adress."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Hantera utökningar eller plugins för din mottagare"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Hantera utökningar eller plugins för din mottagare."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Online uppdatering av din mottagares mjukvara."
+msgid "Online update of your receiver software."
+msgstr "Online uppdatering av din mottagares mjukvara."
 
 #
 msgid ""
@@ -97,20 +85,12 @@ msgstr ""
 "\n"
 "Återställ dina säkerhetskopior med datum."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Återställ mottagares inställningar."
+msgid "Restore your receiver settings."
+msgstr "Återställ mottagares inställningar."
 
 #
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Sök efter lokala utökningar och installera dem."
+msgid "Scan for local extensions and install them."
+msgstr "Sök efter lokala utökningar och installera dem."
 
 #
 msgid ""
