--- a/po/th.po
+++ b/po/th.po
@@ -33,9 +33,7 @@ msgstr ""
 "\n"
 "กดปุ่ม OK แล้วรอสักครู่"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
+msgid "Backup your receiver settings."
 msgstr ""
 
 msgid ""
@@ -50,14 +48,10 @@ msgstr ""
 "\n"
 "แก้ไขที่อยู่เพื่อโหลดส่วนปรับปรุง"
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
+msgid "Manage extensions or plugins for your receiver."
 msgstr ""
 
-msgid ""
-"\n"
-"Online update of your receiver software."
+msgid "Online update of your receiver software."
 msgstr ""
 
 msgid ""
@@ -85,14 +79,10 @@ msgstr ""
 "\n"
 "นำสำรองกลับมาใช้ตามวันที่"
 
-msgid ""
-"\n"
-"Restore your receiver settings."
+msgid "Restore your receiver settings."
 msgstr ""
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
+msgid "Scan for local extensions and install them."
 msgstr ""
 
 msgid ""
