--- a/po/uk.po
+++ b/po/uk.po
@@ -27,12 +27,8 @@ msgstr ""
 "\n"
 "Після натискання ОК, зачекайте!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Бекап налаштувань вашого ресиверу."
+msgid "Backup your receiver settings."
+msgstr "Бекап налаштувань вашого ресиверу."
 
 msgid ""
 "\n"
@@ -48,19 +44,11 @@ msgstr ""
 "\n"
 "Редагувати адресу джерела оновлення."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Управління доповненнями або плагінами Вашого ресивера"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Управління доповненнями або плагінами Вашого ресивера."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Онлайн оновлення софта вашого ресивера."
+msgid "Online update of your receiver software."
+msgstr "Онлайн оновлення софта вашого ресивера."
 
 msgid ""
 "\n"
@@ -89,19 +77,11 @@ msgstr ""
 "\n"
 "Відновити резервні копії за датою."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Відновити налаштування вашого ресивера."
+msgid "Restore your receiver settings."
+msgstr "Відновити налаштування вашого ресивера."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Сканування і установка локальних доповнень."
+msgid "Scan for local extensions and install them."
+msgstr "Сканування і установка локальних доповнень."
 
 msgid ""
 "\n"
