--- a/po/vi.po
+++ b/po/vi.po
@@ -27,12 +27,8 @@ msgstr ""
 "\n"
 "Sau khi nhấn OK, vui lòng đợi!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
-msgstr ""
-"\n"
-"Sao lưu cài đặt máy thu của bạn."
+msgid "Backup your receiver settings."
+msgstr "Sao lưu cài đặt máy thu của bạn."
 
 msgid ""
 "\n"
@@ -48,19 +44,11 @@ msgstr ""
 "\n"
 "Chỉnh sửa địa chỉ nguồn nâng cấp."
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
-msgstr ""
-"\n"
-"Quản lý tiện ích mở rộng hoặc plugin cho đầu thu của bạn"
+msgid "Manage extensions or plugins for your receiver."
+msgstr "Quản lý tiện ích mở rộng hoặc plugin cho đầu thu của bạn."
 
-msgid ""
-"\n"
-"Online update of your receiver software."
-msgstr ""
-"\n"
-"Cập nhật trực tuyến phần mềm nhận của bạn."
+msgid "Online update of your receiver software."
+msgstr "Cập nhật trực tuyến phần mềm nhận của bạn."
 
 msgid ""
 "\n"
@@ -90,19 +78,11 @@ msgstr ""
 "\n"
 "Khôi phục bản sao lưu của bạn theo ngày."
 
-msgid ""
-"\n"
-"Restore your receiver settings."
-msgstr ""
-"\n"
-"Khôi phục cài đặt máy thu của bạn."
+msgid "Restore your receiver settings."
+msgstr "Khôi phục cài đặt máy thu của bạn."
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"Quét các tiện ích mở rộng cục bộ và cài đặt chúng."
+msgid "Scan for local extensions and install them."
+msgstr "Quét các tiện ích mở rộng cục bộ và cài đặt chúng."
 
 msgid ""
 "\n"
