--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -29,9 +29,7 @@ msgstr ""
 "\n"
 "按OK键确定后, 请稍等!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
+msgid "Backup your receiver settings."
 msgstr ""
 
 msgid ""
@@ -46,14 +44,10 @@ msgstr ""
 "\n"
 "编辑升级源地址。"
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
+msgid "Manage extensions or plugins for your receiver."
 msgstr ""
 
-msgid ""
-"\n"
-"Online update of your receiver software."
+msgid "Online update of your receiver software."
 msgstr ""
 
 msgid ""
@@ -81,17 +75,11 @@ msgstr ""
 "\n"
 "按日期恢复您的备份"
 
-msgid ""
-"\n"
-"Restore your receiver settings."
+msgid "Restore your receiver settings."
 msgstr ""
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"扫描本地扩展并安装."
+msgid "Scan for local extensions and install them."
+msgstr "扫描本地扩展并安装."
 
 msgid ""
 "\n"
