--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -26,9 +26,7 @@ msgstr ""
 "\n"
 "按OK鍵確定後, 請稍等!"
 
-msgid ""
-"\n"
-"Backup your receiver settings."
+msgid "Backup your receiver settings."
 msgstr ""
 
 msgid ""
@@ -43,14 +41,10 @@ msgstr ""
 "\n"
 "編輯升級源地址。"
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
+msgid "Manage extensions or plugins for your receiver."
 msgstr ""
 
-msgid ""
-"\n"
-"Online update of your receiver software."
+msgid "Online update of your receiver software."
 msgstr ""
 
 msgid ""
@@ -78,17 +72,11 @@ msgstr ""
 "\n"
 "按日期恢復您的備份"
 
-msgid ""
-"\n"
-"Restore your receiver settings."
+msgid "Restore your receiver settings."
 msgstr ""
 
-msgid ""
-"\n"
-"Scan for local extensions and install them."
-msgstr ""
-"\n"
-"掃描本地套裝軟體並安裝它們。"
+msgid "Scan for local extensions and install them."
+msgstr "掃描本地套裝軟體並安裝它們。"
 
 msgid ""
 "\n"
