--- a/po/ca.po
+++ b/po/ca.po
@@ -31,9 +31,7 @@ msgid ""
 "After pressing OK, please wait!"
 msgstr ""
 
-msgid ""
-"\n"
-"Backup your receiver settings."
+msgid "Backup your receiver settings."
 msgstr ""
 
 msgid ""
@@ -47,14 +45,10 @@ msgid ""
 "Edit the update source address."
 msgstr ""
 
-msgid ""
-"\n"
-"Manage extensions or plugins for your receiver"
+msgid "Manage extensions or plugins for your receiver."
 msgstr ""
 
-msgid ""
-"\n"
-"Online update of your receiver software."
+msgid "Online update of your receiver software."
 msgstr ""
 
 #
@@ -81,15 +75,11 @@ msgid ""
 "Restore your backups by date."
 msgstr ""
 
-msgid ""
-"\n"
-"Restore your receiver settings."
+msgid "Restore your receiver settings."
 msgstr ""
 
 #
-msgid ""
-"\n"
-"Scan for local extensions and install them."
+msgid "Scan for local extensions and install them."
 msgstr ""
 
 #
